--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  background-color: #FF9A5C;
+  background-color: #ff9a5c;
   padding: 20px;
   font-weight: bold;
-  color: #2C3763;
+  color: #2c3763;
 }
