--- a/src/routes/MakeGroupsPage/MakeGroupsPage.css
+++ b/src/routes/MakeGroupsPage/MakeGroupsPage.css
@@ -1,5 +1,5 @@
 .make-groups-page {
-  background-color: #E2E4F3;
+  background-color: #e2e4f3;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,13 +8,13 @@
 
 .make-groups-page__body-container {
   background-color: whitesmoke;
-  -webkit-box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
-  -moz-box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
-  box-shadow: 1px 1px 3px 0px rgba(211,211,211,1);
+  -webkit-box-shadow: 1px 1px 3px 0px rgba(211, 211, 211, 1);
+  -moz-box-shadow: 1px 1px 3px 0px rgba(211, 211, 211, 1);
+  box-shadow: 1px 1px 3px 0px rgba(211, 211, 211, 1);
   margin: 20px;
   padding: 20px;
   border-radius: 10px;
-  border: 3px solid #FF9A5C;
+  border: 3px solid #ff9a5c;
 }
 
 .make-groups-page__body-container > h1 {
@@ -65,7 +65,7 @@ make-groups-page--after-textarea */
   font-family: inherit;
   line-height: 100%;
   font-size: 11px;
-  color: #3F4F8D;
+  color: #3f4f8d;
   background-color: transparent;
   border: none;
   width: 100px;
@@ -96,7 +96,7 @@ make-groups-page--after-textarea */
   font-family: inherit;
   line-height: 100%;
   font-size: 11px;
-  color: #3F4F8D;
+  color: #3f4f8d;
   background-color: transparent;
   border: none;
   width: 100px;
@@ -131,7 +131,7 @@ make-groups-page--after-textarea */
   .make-groups-page {
     font-size: 0.95em;
   }
-  
+
   .make-groups-page__form--student-data {
     display: flex;
     align-items: flex-end;
@@ -160,5 +160,4 @@ make-groups-page--after-textarea */
   .make-groups-page__form--after-textarea > button {
     width: 42%;
   }
-
 }
